compiler/mesh-lexer/tests/snapshots/lexer_tests__actor_keyword.snap
---
source: crates/mesh-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: Actor
  text: actor
  span:
    - 0
    - 5
- kind: Ident
  text: MyCounter
  span:
    - 6
    - 15
- kind: Do
  text: do
  span:
    - 16
    - 18
- kind: End
  text: end
  span:
    - 19
    - 22
- kind: Eof
  text: ""
  span:
    - 22
    - 22
