compiler/mesh-lexer/tests/snapshots/lexer_tests__adjacent_interpolations.snap
---
source: crates/mesh-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: StringStart
  text: "\""
  span:
    - 0
    - 1
- kind: InterpolationStart
  text: "${"
  span:
    - 1
    - 3
- kind: Ident
  text: a
  span:
    - 3
    - 4
- kind: InterpolationEnd
  text: "}"
  span:
    - 4
    - 5
- kind: InterpolationStart
  text: "${"
  span:
    - 5
    - 7
- kind: Ident
  text: b
  span:
    - 7
    - 8
- kind: InterpolationEnd
  text: "}"
  span:
    - 8
    - 9
- kind: StringEnd
  text: "\""
  span:
    - 9
    - 10
- kind: Eof
  text: ""
  span:
    - 10
    - 10
