compiler/mesh-lexer/tests/snapshots/lexer_tests__consecutive_newlines.snap
---
source: crates/mesh-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: Let
  text: let
  span:
    - 0
    - 3
- kind: Ident
  text: x
  span:
    - 4
    - 5
- kind: Eq
  text: "="
  span:
    - 6
    - 7
- kind: IntLiteral
  text: "1"
  span:
    - 8
    - 9
- kind: Newline
  text: "\n"
  span:
    - 9
    - 10
- kind: Newline
  text: "\n"
  span:
    - 10
    - 11
- kind: Newline
  text: "\n"
  span:
    - 11
    - 12
- kind: Let
  text: let
  span:
    - 12
    - 15
- kind: Ident
  text: y
  span:
    - 16
    - 17
- kind: Eq
  text: "="
  span:
    - 18
    - 19
- kind: IntLiteral
  text: "2"
  span:
    - 20
    - 21
- kind: Eof
  text: ""
  span:
    - 21
    - 21
