compiler/mesh-lexer/tests/snapshots/lexer_tests__crlf_newlines.snap
---
source: crates/mesh-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: Let
  text: let
  span:
    - 0
    - 3
- kind: Ident
  text: x
  span:
    - 4
    - 5
- kind: Eq
  text: "="
  span:
    - 6
    - 7
- kind: IntLiteral
  text: "1"
  span:
    - 8
    - 9
- kind: Newline
  text: "\r\n"
  span:
    - 9
    - 11
- kind: Let
  text: let
  span:
    - 11
    - 14
- kind: Ident
  text: y
  span:
    - 15
    - 16
- kind: Eq
  text: "="
  span:
    - 17
    - 18
- kind: IntLiteral
  text: "2"
  span:
    - 19
    - 20
- kind: Eof
  text: ""
  span:
    - 20
    - 20
