compiler/mesh-lexer/tests/snapshots/lexer_tests__doc_comment.snap
---
source: crates/mesh-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: DocComment
  text: "## this is a doc comment"
  span:
    - 0
    - 24
- kind: Eof
  text: ""
  span:
    - 24
    - 24
