compiler/mesh-lexer/tests/snapshots/lexer_tests__empty_input.snap
---
source: crates/mesh-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: Eof
  text: ""
  span:
    - 0
    - 0
