compiler/mesh-lexer/tests/snapshots/lexer_tests__error_recovery.snap
---
source: compiler/mesh-lexer/tests/lexer_tests.rs
assertion_line: 135
expression: tokens
---
- kind: Let
  text: let
  span:
    - 0
    - 3
- kind: Ident
  text: x
  span:
    - 4
    - 5
- kind: Eq
  text: "="
  span:
    - 6
    - 7
- kind: At
  text: "@"
  span:
    - 8
    - 9
- kind: Newline
  text: "\n"
  span:
    - 9
    - 10
- kind: Let
  text: let
  span:
    - 10
    - 13
- kind: Ident
  text: y
  span:
    - 14
    - 15
- kind: Eq
  text: "="
  span:
    - 16
    - 17
- kind: IntLiteral
  text: "42"
  span:
    - 18
    - 20
- kind: Newline
  text: "\n"
  span:
    - 20
    - 21
- kind: StringStart
  text: "\""
  span:
    - 21
    - 22
- kind: StringContent
  text: "unterminated string\nlet z = 100\n"
  span:
    - 22
    - 54
- kind: Error
  text: ""
  span:
    - 54
    - 54
- kind: Eof
  text: ""
  span:
    - 54
    - 54
