compiler/mesh-lexer/tests/snapshots/lexer_tests__escaped_dollar_in_string.snap
---
source: crates/mesh-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: StringStart
  text: "\""
  span:
    - 0
    - 1
- kind: StringContent
  text: "price: \\$100"
  span:
    - 1
    - 13
- kind: StringEnd
  text: "\""
  span:
    - 13
    - 14
- kind: Eof
  text: ""
  span:
    - 14
    - 14
