compiler/mesh-lexer/tests/snapshots/lexer_tests__keywords.snap
---
source: crates/mesh-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: Actor
  text: actor
  span:
    - 0
    - 5
- kind: Fn
  text: fn
  span:
    - 6
    - 8
- kind: Let
  text: let
  span:
    - 9
    - 12
- kind: Struct
  text: struct
  span:
    - 13
    - 19
- kind: Module
  text: module
  span:
    - 20
    - 26
- kind: Import
  text: import
  span:
    - 27
    - 33
- kind: If
  text: if
  span:
    - 34
    - 36
- kind: Else
  text: else
  span:
    - 37
    - 41
- kind: Case
  text: case
  span:
    - 42
    - 46
- kind: Match
  text: match
  span:
    - 47
    - 52
- kind: Do
  text: do
  span:
    - 53
    - 55
- kind: End
  text: end
  span:
    - 56
    - 59
- kind: Newline
  text: "\n"
  span:
    - 59
    - 60
- kind: Receive
  text: receive
  span:
    - 60
    - 67
- kind: Spawn
  text: spawn
  span:
    - 68
    - 73
- kind: Supervisor
  text: supervisor
  span:
    - 74
    - 84
- kind: Send
  text: send
  span:
    - 85
    - 89
- kind: Link
  text: link
  span:
    - 90
    - 94
- kind: Terminate
  text: terminate
  span:
    - 95
    - 104
- kind: Newline
  text: "\n"
  span:
    - 104
    - 105
- kind: After
  text: after
  span:
    - 105
    - 110
- kind: And
  text: and
  span:
    - 111
    - 114
- kind: Or
  text: or
  span:
    - 115
    - 117
- kind: Not
  text: not
  span:
    - 118
    - 121
- kind: In
  text: in
  span:
    - 122
    - 124
- kind: For
  text: for
  span:
    - 125
    - 128
- kind: Newline
  text: "\n"
  span:
    - 128
    - 129
- kind: Pub
  text: pub
  span:
    - 129
    - 132
- kind: Impl
  text: impl
  span:
    - 133
    - 137
- kind: Type
  text: type
  span:
    - 138
    - 142
- kind: Def
  text: def
  span:
    - 143
    - 146
- kind: Return
  text: return
  span:
    - 147
    - 153
- kind: SelfKw
  text: self
  span:
    - 154
    - 158
- kind: When
  text: when
  span:
    - 159
    - 163
- kind: Where
  text: where
  span:
    - 164
    - 169
- kind: Newline
  text: "\n"
  span:
    - 169
    - 170
- kind: "True"
  text: "true"
  span:
    - 170
    - 174
- kind: "False"
  text: "false"
  span:
    - 175
    - 180
- kind: Nil
  text: nil
  span:
    - 181
    - 184
- kind: Newline
  text: "\n"
  span:
    - 184
    - 185
- kind: Eof
  text: ""
  span:
    - 185
    - 185
